<resources>
    <string name="app_name">ActivityGame</string>
    <string name="imageButton">TODO</string>
    <string name="frontName">Activity</string>
    <string name="startCountdown">Start countdown</string>
    <string name="stopCountdown">Stop countdown</string>
    <string name="time">30</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="word">TextView</string>
    <string name="newWord">New Word</string>
    <string name="share">TextView</string>
    <string name="the_end">The End</string>
    <string name="statisticsButton">Statistics</string>
    <string name="endText">text</string>
    <string name="statistics">Statistics</string>
    <string name="statisticsText">TextView</string>
    <string name="done">DONE</string>
    <string name="selectTeams">Select 2 teams</string>
    <string name="team">1. Team</string>
    <string name="teamName">Name</string>
    <string name="teamColor">Color</string>
    <string name="team_name">1. Team</string>
    <string name="color">color</string>
    <string name="choose_color">choose Color</string>
    <string name="black">TODO</string>
    <string name="red">TODO</string>
    <string name="green">TODO</string>
    <string name="blue">TODO</string>
    <string name="player_1_input">Player 1_1</string>
    <string name="player_2_input">Player 1_2</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="play_team_name">TextView</string>
    <string name="team_1_points">1. Team</string>
    <string name="team_2_points">2. Team</string>
    <string name="points1">0 points</string>
    <string name="points2">0 points</string>
    <string name="player_on">TextView</string>
    <string name="visible">TODO</string>
    <string name="stats1">TextView</string>
    <string name="stats2">TextView</string>
    <string name="details1">TextView</string>
    <string name="details2">TextView</string>
    <string name="move1">TextView</string>
    <string name="move2">TextView</string>
    <string name="w1">TextView</string>
    <string name="w2">TextView</string>
    <string name="max_points">MAX Points:</string>
    <string name="max">TextView</string>
</resources>
